--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
         <div class="container__menu">
             <div class="logo">
-                <img loading="lazy" src="images/logo_fomacion.png" alt="">
+                <img loading="lazy" src="images/logo_fomacion.jpg.png" alt="">
             </div>
             <div class="menu">
                 <i class="fas fa-bars" id="btn_menu"></i>
                 <div id="back_menu"></div>
                 <nav id="nav">
-                    <img src="images/logo_fomacion.png" alt="">
+                    <img src="images/logo_fomacion.jpg.png" alt="">
                     <ul>
                         <li><a href="valores de la empresa.html" id="selected">Valores de nuestra escuela</a></li>
                         <li><h1> “Lo que se les dé a los niños, los niños darán a la sociedad”</h1></li>
